# icemon

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile.cmake.in  IDEAS.poolview  INSTALL  Makefile.am  README.md  config-icemon.h.cmake  configure.in.bot  configure.in.in  detailedhostview.cc  detailedhostview.h  format.config.uncrustify.4_spaces  ganttstatusview.cc  ganttstatusview.h  hostinfo.cc  hostinfo.h  hostlistview.cc  hostlistview.h  hostview.cc  hostview.h  icemon.desktop  icemon.kdev4  icemonapplet.cpp  icemonapplet.desktop  icemonui.rc  job.cc  job.h  joblistview.cc  joblistview.h  listview.cc  listview.h  main.cc  mainwindow.cc  mainwindow.h  mon-kde.cc  mon-kde.h  (+10 more)
.github/workflows/: cmake-single-platform.yml
cmake/modules/: FindDocbook2X.cmake  FindIcecream.cmake  KDE4Macros-Icecream.cmake
debian/: changelog  control  copyright  rules
debian/patches/: icecream2icecc.diff
doc/: CMakeLists.txt  icemon.adoc  icemon.md  man-icemon.1.xml
doc/icemon/: index.docbook
src/: CMakeLists.txt  Makefile.am  Messages.sh  configure.in.in  detailedhostview.cc  detailedhostview.h  fakemonitor.cc  fakemonitor.h  flowtableview.cc  flowtableview.h  ganttstatusview.cc  ganttstatusview.h  hisc-app-icemon.svgz  hostinfo.cc  hostinfo.h  hostlistmodel.cc  hostlistmodel.h  hostlistview.cc  hostlistview.h  hostview.cc  hostview.h  icecreammonitor.cc  icecreammonitor.h  icemon.desktop  icemon.qrc  icemonapplet.cpp  icemonapplet.desktop  icemonapplet.h  icemonui.rc  job.cc  job.h  joblistmodel.cc  joblistmodel.h  joblistview.cc  joblistview.h  listview.cc  listview.h  main.cc  mainwindow.cc  mainwindow.h  (+20 more)
src/cmake/modules/: CMakeLists.txt  FindIcecream.cmake
src/images/: CMakeLists.txt
src/models/: hostlistmodel.cc  hostlistmodel.h  joblistmodel.cc  joblistmodel.h
src/views/: detailedhostview.cc  detailedhostview.h  flowtableview.cc  flowtableview.h  ganttstatusview.cc  ganttstatusview.h  hostlistmodel.cc  hostlistmodel.h  hostlistview.cc  hostlistview.h  joblistmodel.cc  joblistmodel.h  joblistview.cc  joblistview.h  listview.cc  listview.h  poolview.cc  poolview.h  starview.cc  starview.h  summaryview.cc  summaryview.h
